--- a/app/src/main/res/layout/navigation_header.xml
+++ b/app/src/main/res/layout/navigation_header.xml
@@ -25,7 +25,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
-        android:text="Omar Ramera Sanchez"
+        android:text="Omar Ramirez Sanchez"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textStyle="bold" />
 
@@ -38,7 +38,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="2dp"
-        android:text="rswomar@gmail.com"
+        android:text="Hawards"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
