add escolar section add tabs escoler add fab general subsection

--- a/app/src/main/res/menu/navigation_items.xml
+++ b/app/src/main/res/menu/navigation_items.xml
@@ -14,7 +14,7 @@
             android:title="Escolar" />
 
         <item
-            android:id="@+id/nav_tracking"
+            android:id="@+id/nav_monitoreo"
             android:icon="@mipmap/ic_accessibility_black_24dp"
             android:title="Monitoreo" />
 
