--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -128,14 +128,16 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-
+                    android:gravity="center_horizontal"
                     android:orientation="vertical">
 
 
                     <TextView
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:gravity="center_horizontal"
+                        android:drawableRight="@mipmap/ic_trending_down_black_24dp"
+                        android:drawableTint="#EF5350"
+                        android:gravity="center"
                         android:text="30%"
                         android:textColor="#fff"
                         android:textSize="21sp"
@@ -165,14 +167,16 @@
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-
                     android:layout_weight="1"
+                    android:gravity="center_horizontal"
                     android:orientation="vertical">
 
 
                     <TextView
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:drawableRight="@mipmap/ic_trending_up_black_24dp"
+                        android:drawableTint="#fff"
                         android:gravity="center_horizontal"
                         android:text="90%"
                         android:textColor="#fff"
