--- a/app/src/main/res/layout/toolbar_formas.xml
+++ b/app/src/main/res/layout/toolbar_formas.xml
@@ -87,15 +87,15 @@
         <!-- app:layout_collapseMode="none" -->
 
 
-        <!--<android.support.v7.widget.Toolbar-->
-        <!--android:id="@+id/toolbar"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="?attr/actionBarSize"-->
-        <!--android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"-->
-        <!--app:layout_collapseMode="pin"-->
-        <!--app:popupTheme="@style/ThemeOverlay.AppCompat.Light">-->
-        <!---->
-        <!--</android.support.v7.widget.Toolbar>-->
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            app:layout_collapseMode="pin"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+
+        </android.support.v7.widget.Toolbar>
 
 
     </android.support.design.widget.CollapsingToolbarLayout>
