--- a/app/src/main/res/layout/fragment_general.xml
+++ b/app/src/main/res/layout/fragment_general.xml
@@ -332,5 +332,5 @@
         android:layout_margin="25dp"
         android:src="@android:drawable/ic_input_add"
         android:tint="@android:color/white"
-        app:fabsize="mini" />
+        app:fabSize="mini" />
 </LinearLayout>
