--- a/app/src/main/res/layout/activity_reportes.xml
+++ b/app/src/main/res/layout/activity_reportes.xml
@@ -87,21 +87,24 @@
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v7.widget.CardView
-
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
         android:layout_marginTop="20dp"
+        android:clickable="true"
         app:cardCornerRadius="4dp">
 
 
         <LinearLayout
+            android:id="@+id/aprendizaje"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#009688"
+            android:background="@drawable/ripple_button_2"
+            android:clickable="true"
             android:orientation="horizontal"
             android:padding="10dp">
+
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/circle_image"
@@ -182,6 +185,7 @@
 
 
         <LinearLayout
+            android:id="@+id/salud"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#00BCD4"
