--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
                 android:layout_gravity="center_horizontal"
                 android:text="Omar Ramirez Sanchez"
                 android:textColor="@android:color/white"
-                android:textSize="15sp"
+                android:textSize="16sp"
                 android:textStyle="bold" />
 
             <LinearLayout
@@ -52,6 +52,8 @@
                     android:layout_gravity="center"
                     android:layout_marginLeft="10dp"
                     android:text="School Haward"
+
+                    android:textAppearance="?android:attr/textAppearanceSmall"
                     android:textColor="@android:color/white"
                     android:textSize="15sp"
                     android:textStyle="bold" />
@@ -65,7 +67,8 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="5dp"
                 android:text="Income : 10:00 AM"
-                android:textColor="@android:color/white"
+                android:textColor="#eee"
+
                 android:textSize="15sp" />
 
             <TextView
@@ -74,7 +77,8 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="5dp"
                 android:text="Exit : 13:30 PM"
-                android:textColor="@android:color/white"
+                android:textColor="#eee"
+
                 android:textSize="15sp" />
 
             <LinearLayout
@@ -110,8 +114,8 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:gravity="center"
-                        android:text="Desarrollo de \naprendizaje"
-                        android:textColor="#fff"
+                        android:text="learning\n development"
+                        android:textColor="#eee"
                         android:textSize="13sp" />
 
                 </LinearLayout>
@@ -150,8 +154,8 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:gravity="center"
-                        android:text="Comportamiento"
-                        android:textColor="#fff"
+                        android:text="Conduct"
+                        android:textColor="#eee"
                         android:textSize="13sp" />
 
                 </LinearLayout>
@@ -189,8 +193,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:text="Salud"
-                        android:textColor="#fff"
+                        android:text="Health"
+                        android:textColor="#eee"
                         android:textSize="13sp" />
 
                 </LinearLayout>
