--- a/app/src/main/res/layout/activity_recomendaciones.xml
+++ b/app/src/main/res/layout/activity_recomendaciones.xml
@@ -42,11 +42,10 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:singleLine="true"
-                    android:text="Aprendizaje"
-                    android:textColor="#fff"
-                    android:textSize="18sp"
-                    android:textStyle="bold"
-                    android:visibility="gone" />
+                    android:text="21 Recomendaciones encontradas"
+                    android:textColor="#FFC107"
+                    android:textSize="19sp"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -97,13 +96,13 @@
 
 
                 <LinearLayout
-                    android:id="@+id/cuestionario"
+                    android:id="@+id/games"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@drawable/ripple_button_2"
                     android:clickable="true"
                     android:orientation="horizontal"
-                    android:padding="10dp">
+                    android:padding="10dp">´
 
 
                     <de.hdodenhof.circleimageview.CircleImageView
@@ -112,7 +111,7 @@
                         android:layout_height="50dp"
                         android:layout_gravity="left|center_vertical"
                         android:scaleType="centerCrop"
-                        android:src="@mipmap/salud"
+                        android:src="@mipmap/aprendizaje2"
                         app:civ_border_color="@android:color/white"
                         app:civ_border_width="6dp" />
 
@@ -122,7 +121,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:layout_marginLeft="40dp"
-                        android:text="Cuestionaio"
+                        android:text="Games"
                         android:textColor="@android:color/white"
                         android:textSize="16sp"
                         android:textStyle="bold" />
@@ -146,7 +145,7 @@
                     android:id="@+id/resultado"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="#0288D1"
+                    android:background="#00BCD4"
                     android:orientation="horizontal"
                     android:padding="12dp">
 
@@ -155,7 +154,7 @@
                         android:layout_width="50dp"
                         android:layout_height="50dp"
                         android:scaleType="centerCrop"
-                        android:src="@mipmap/salud"
+                        android:src="@mipmap/resultados"
                         android:tint="@color/colorAccent"
                         app:civ_border_color="@android:color/white"
                         app:civ_border_width="6dp" />
@@ -166,7 +165,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:layout_marginLeft="40dp"
-                        android:text="Resultado"
+                        android:text="Books and stories"
                         android:textColor="@android:color/white"
                         android:textSize="16sp"
                         android:textStyle="bold" />
@@ -189,7 +188,7 @@
                     android:id="@+id/recomendaciones"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="#00BCD4"
+                    android:background="@drawable/ripple_button_2"
                     android:orientation="horizontal"
                     android:padding="12dp">
 
@@ -197,7 +196,6 @@
 
                         android:layout_width="50dp"
                         android:layout_height="50dp"
-
                         android:scaleType="centerCrop"
                         android:src="@mipmap/salud"
                         android:tint="@color/colorAccent"
@@ -210,7 +208,137 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:layout_marginLeft="40dp"
-                        android:text="Recomendaciones"
+                        android:text="Exercises"
+                        android:textColor="@android:color/white"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
+
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:layout_marginTop="20dp"
+                app:cardCornerRadius="4dp">
+
+
+                <LinearLayout
+
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="#00BCD4"
+                    android:orientation="horizontal"
+                    android:padding="12dp">
+
+                    <de.hdodenhof.circleimageview.CircleImageView
+
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:scaleType="centerCrop"
+                        android:src="@mipmap/salud"
+                        android:tint="@color/colorAccent"
+                        app:civ_border_color="@android:color/white"
+                        app:civ_border_width="6dp" />
+
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginLeft="40dp"
+                        android:text="Movies"
+                        android:textColor="@android:color/white"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
+
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:layout_marginTop="20dp"
+                app:cardCornerRadius="4dp">
+
+
+                <LinearLayout
+
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/ripple_button_2"
+                    android:orientation="horizontal"
+                    android:padding="12dp">
+
+                    <de.hdodenhof.circleimageview.CircleImageView
+
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:scaleType="centerCrop"
+                        android:src="@mipmap/salud"
+                        android:tint="@color/colorAccent"
+                        app:civ_border_color="@android:color/white"
+                        app:civ_border_width="6dp" />
+
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginLeft="40dp"
+                        android:text="Type specialists"
+                        android:textColor="@android:color/white"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
+
+            </android.support.v7.widget.CardView>
+
+
+            <android.support.v7.widget.CardView
+
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:layout_marginTop="20dp"
+                app:cardCornerRadius="4dp">
+
+
+                <LinearLayout
+
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="#00BCD4"
+                    android:orientation="horizontal"
+                    android:padding="12dp">
+
+                    <de.hdodenhof.circleimageview.CircleImageView
+
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:scaleType="centerCrop"
+                        android:src="@mipmap/salud"
+                        android:tint="@color/colorAccent"
+                        app:civ_border_color="@android:color/white"
+                        app:civ_border_width="6dp" />
+
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginLeft="40dp"
+                        android:text="Technical information"
                         android:textColor="@android:color/white"
                         android:textSize="16sp"
                         android:textStyle="bold" />
