--- a/app/src/main/res/layout/activity_recomendaciones.xml
+++ b/app/src/main/res/layout/activity_recomendaciones.xml
@@ -43,7 +43,7 @@
                     android:layout_gravity="center"
                     android:singleLine="true"
                     android:text="21 Recomendaciones encontradas"
-                    android:textColor="#FFC107"
+                    android:textColor="#fff"
                     android:textSize="19sp"
                     android:textStyle="bold" />
 
@@ -347,9 +347,19 @@
 
             </android.support.v7.widget.CardView>
 
+
         </LinearLayout>
 
 
     </android.support.v4.widget.NestedScrollView>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="25dp"
+        android:src="@android:drawable/ic_input_add"
+        android:tint="@android:color/white" />
 
 </android.support.design.widget.CoordinatorLayout>
